@@ -10,8 +10,8 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.Assert.*;
 import static org.mockito.Mockito.when;
@@ -19,7 +19,7 @@ import static org.mockito.Mockito.when;
 /**
  * Integration tests for SQS flows
  */
-public class SqsIntegrationTest {
+public class SqsIntegrationTest extends BaseIntegrationTest {
 
     private UnifiedTaskHandler handler;
 
@@ -43,11 +43,12 @@ public class SqsIntegrationTest {
         SQSEvent event = new SQSEvent();
         SQSEvent.SQSMessage message = new SQSEvent.SQSMessage();
         message.setMessageId("single-msg-001");
+        message.setEventSource("aws:sqs");
         message.setBody("{\"name\":\"Test Task\",\"description\":\"Single message test\",\"status\":\"TODO\"}");
         message.setReceiptHandle("receipt-001");
-        event.setRecords(Arrays.asList(message));
+        event.setRecords(List.of(message));
 
-        Object response = handler.handleRequest(event, mockContext);
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
         assertNotNull(response);
         assertTrue(response instanceof SQSBatchResponse);
@@ -67,6 +68,7 @@ public class SqsIntegrationTest {
         for (int i = 1; i <= 5; i++) {
             SQSEvent.SQSMessage message = new SQSEvent.SQSMessage();
             message.setMessageId("batch-msg-" + i);
+            message.setEventSource("aws:sqs");
             message.setBody("{\"name\":\"Batch Task " + i + "\",\"description\":\"Order processing task\",\"status\":\"TODO\"}");
             message.setReceiptHandle("receipt-" + i);
             messages.add(message);
@@ -74,7 +76,7 @@ public class SqsIntegrationTest {
 
         event.setRecords(messages);
 
-        Object response = handler.handleRequest(event, mockContext);
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
         assertNotNull(response);
         assertTrue(response instanceof SQSBatchResponse);
@@ -92,6 +94,7 @@ public class SqsIntegrationTest {
         SQSEvent event = new SQSEvent();
         SQSEvent.SQSMessage message = new SQSEvent.SQSMessage();
         message.setMessageId("large-payload-msg");
+        message.setEventSource("aws:sqs");
 
         // Create a large description with 100 items
         StringBuilder largeDescription = new StringBuilder("Processing items: ");
@@ -101,12 +104,12 @@ public class SqsIntegrationTest {
         }
 
         String largeBody = "{\"name\":\"Large Batch Task\",\"description\":\"" +
-                largeDescription.toString() + "\",\"status\":\"TODO\"}";
+                largeDescription + "\",\"status\":\"TODO\"}";
 
         message.setBody(largeBody);
-        event.setRecords(Arrays.asList(message));
+        event.setRecords(List.of(message));
 
-        Object response = handler.handleRequest(event, mockContext);
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
         assertNotNull(response);
         SQSBatchResponse batchResponse = (SQSBatchResponse) response;
@@ -122,14 +125,21 @@ public class SqsIntegrationTest {
         SQSEvent event = new SQSEvent();
         event.setRecords(new ArrayList<>());
 
-        Object response = handler.handleRequest(event, mockContext);
+        // Should return error response because empty SQS batch is invalid
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
-        assertNotNull("Response should not be null even for empty batch", response);
-        assertTrue(response instanceof SQSBatchResponse);
-        SQSBatchResponse batchResponse = (SQSBatchResponse) response;
-        assertEquals(0, batchResponse.getBatchItemFailures().size());
+        assertNotNull(response);
+        assertTrue(response instanceof Map);
+        @SuppressWarnings("unchecked")
+        Map<String, Object> errorResponse = (Map<String, Object>) response;
 
-        System.out.println("✓ Empty batch test passed");
+        assertEquals("Task processing failed", errorResponse.get("errorMessage"));
+        assertEquals("IllegalArgumentException", errorResponse.get("errorType"));
+        assertEquals("Invalid SQS Event: Records list is empty", errorResponse.get("errorReason"));
+        assertNotNull(errorResponse.get("requestId"));
+        assertNotNull(errorResponse.get("timestamp"));
+
+        System.out.println("✓ Empty batch validation test passed");
     }
 
     @Test
@@ -141,11 +151,13 @@ public class SqsIntegrationTest {
 
         SQSEvent.SQSMessage message1 = new SQSEvent.SQSMessage();
         message1.setMessageId("duplicate-msg-001");
+        message1.setEventSource("aws:sqs");
         message1.setBody("{\"orderId\":\"DUP-ORDER-001\",\"amount\":500}");
         message1.setReceiptHandle("receipt-dup-001");
 
         SQSEvent.SQSMessage message2 = new SQSEvent.SQSMessage();
         message2.setMessageId("duplicate-msg-001");
+        message2.setEventSource("aws:sqs");
         message2.setBody("{\"orderId\":\"DUP-ORDER-001\",\"amount\":500}");
         message2.setReceiptHandle("receipt-dup-002");
 
@@ -153,7 +165,7 @@ public class SqsIntegrationTest {
         messages.add(message2);
         event.setRecords(messages);
 
-        Object response = handler.handleRequest(event, mockContext);
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
         assertNotNull(response);
         assertTrue(response instanceof SQSBatchResponse);
@@ -170,14 +182,15 @@ public class SqsIntegrationTest {
 
         SQSEvent.SQSMessage message = new SQSEvent.SQSMessage();
         message.setMessageId("incomplete-msg-001");
+        message.setEventSource("aws:sqs");
         message.setBody("{}");
 
         messages.add(message);
         event.setRecords(messages);
 
-        Object response = handler.handleRequest(event, mockContext);
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
-        assertNotNull("Should handle incomplete messages gracefully", response);
+        assertNotNull("Should route incomplete messages gracefully", response);
         assertTrue(response instanceof SQSBatchResponse);
 
         System.out.println("✓ Missing fields test passed");
@@ -201,6 +214,7 @@ public class SqsIntegrationTest {
         for (int i = 0; i < messageBodies.length; i++) {
             SQSEvent.SQSMessage message = new SQSEvent.SQSMessage();
             message.setMessageId("mixed-msg-" + (i + 1));
+            message.setEventSource("aws:sqs");
             message.setBody(messageBodies[i]);
             message.setReceiptHandle("receipt-" + (i + 1));
             messages.add(message);
@@ -208,7 +222,7 @@ public class SqsIntegrationTest {
 
         event.setRecords(messages);
 
-        Object response = handler.handleRequest(event, mockContext);
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
         assertNotNull(response);
         assertTrue(response instanceof SQSBatchResponse);
@@ -228,13 +242,14 @@ public class SqsIntegrationTest {
 
         SQSEvent.SQSMessage message = new SQSEvent.SQSMessage();
         message.setMessageId("test-msg-001");
+        message.setEventSource("aws:sqs");
         message.setBody("{\"testData\":\"value\"}");
         message.setReceiptHandle("receipt-001");
         messages.add(message);
 
         event.setRecords(messages);
 
-        Object response = handler.handleRequest(event, mockContext);
+        Object response = handler.handleRequest(convertToMap(event), mockContext);
 
         assertNotNull("Response must not be null", response);
         assertTrue("Response must be SQSBatchResponse", response instanceof SQSBatchResponse);
@@ -247,4 +262,5 @@ public class SqsIntegrationTest {
         System.out.println("✓ Response structure test passed");
     }
 }
+
 
